# private_deposit

./: .gitignore  Cargo.toml  README.md  create_circuits.sh
circom/: .gitignore  transactions.circom
circom/main/: deposit.circom  deposit.r1cs  transaction.circom  transaction.r1cs  transaction_batched.circom  withdraw.circom  withdraw.r1cs
contract-rs/: Cargo.toml
contract-rs/src/: ae.rs  conf_token.rs  lib.rs  priv_balance.rs  token.rs
contracts/: .gitignore  ConfidentialToken.json  PrivateBalance.json  Readme.md  USDCToken.json  foundry.toml
contracts/script/: arc_testnet.md  base_testnet.md  execute.sh  priv_balance.s.sol
contracts/script/deploy/: conf_token.s.sol  conf_token_with_deps.s.sol  deploy_and_init.s.sol  groth16_verifier.s.sol  poseidon2.s.sol  priv_balance.s.sol  priv_balance_with_deps.s.sol  token.s.sol
contracts/script/test/: approve_token.s.sol  deposit.s.sol  mint_token.s.sol  mpc.s.sol  retrieve.s.sol  transfer.s.sol  withdraw.s.sol
contracts/src/: action_queue.sol  action_vector.sol  conf_token.sol  groth16_verifier.sol  poseidon2.sol  priv_balance.sol  token.sol
contracts/test/: action_queue.t.sol  conf_token.t.sol  priv_balance.t.sol
docs/: preamble.typst  priv_balance.typst  references.bib
noir/private_deposit/: Nargo.toml  Prover.toml
noir/private_deposit/src/: lib.nr  main.nr
noir/private_deposit_common/: Nargo.toml
noir/private_deposit_common/src/: hash.nr  lib.nr
noir/private_transaction/: Nargo.toml  Prover.toml
noir/private_transaction/src/: main.nr
noir/private_transaction_batched/: Nargo.toml  Prover.toml
noir/private_transaction_batched/src/: main.nr
noir/private_withdraw/: Nargo.toml  Prover.toml
noir/private_withdraw/src/: main.nr
private_deposit/: Cargo.toml
private_deposit/data/: private_deposit.json  private_transaction.json  private_transaction_batched.json  private_withdraw.json
private_deposit/src/: data_structure.rs  lib.rs
private_deposit/src/proof/: actionquery.rs  deposit.rs  mod.rs  transaction.rs  transaction_batched.rs  withdraw.rs
private_deposit/src/proof/circom/: deposit.rs  mod.rs  transaction.rs  transaction_batched.rs  withdraw.rs
