[workspace]
members = ["private_deposit", "contract-rs"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
authors = ["TACEO GmbH <hello@taceo.io>"]
homepage = "https://www.taceo.io"
repository = "https:://github.com/TaceoLabs/private_deposit"
license = "MIT OR Apache-2.0"
publish = false
readme = "./README.md"

[workspace.dependencies]
alloy = { version = "1", default-features = false }
ark-babyjubjub = { version = "0.5.0", git = "https://github.com/TaceoLabs/nullifier-oracle-service", rev = "8d04f68c136a2185f6898c9613e7e7ac229e2651" }
ark-bn254 = "^0.5.0"
ark-ec = "^0.5.0"
ark-ff = "^0.5.0"
ark-groth16 = "0.5.0"
ark-serialize = { version = "^0.5.0", features = ["derive", "std"] }
clap = { version = "4.4.8", features = ["derive"] }
circom-mpc-vm = { version = "0.8.0", git = "https://github.com/TaceoLabs/co-snarks", rev = "e636308efdf115149d53e05e70b157cfe5babb6c" }
co-circom = { version = "0.9.0", git = "https://github.com/TaceoLabs/co-snarks", rev = "e636308efdf115149d53e05e70b157cfe5babb6c" }
co-noir = { version = "0.6.0", git = "https://github.com/TaceoLabs/co-snarks", rev = "e636308efdf115149d53e05e70b157cfe5babb6c" }
co-noir-common = { version = "0.1.0", git = "https://github.com/TaceoLabs/co-snarks", rev = "e636308efdf115149d53e05e70b157cfe5babb6c" }
co-noir-to-r1cs = { version = "0.1.0", git = "https://github.com/TaceoLabs/CoNoir-to-R1CS", rev = "42499825570aa0d33f54b9d8ff1f29e17349bbae" }
# co-noir-to-r1cs = { version = "0.1.0", git = "https://github.com/TaceoLabs/CoNoir-to-R1CS", branch = "deploy" }
eyre = "0.6.12"
figment = { version = "0.10.19", features = ["toml", "env"] }
itertools = "0.14.0"
mpc-core = { version = "0.9.0", git = "https://github.com/TaceoLabs/co-snarks", rev = "e636308efdf115149d53e05e70b157cfe5babb6c" }
mpc-net = { version = "0.4.0", git = "https://github.com/TaceoLabs/co-snarks", rev = "e636308efdf115149d53e05e70b157cfe5babb6c", features = [
    "local",
] }
noirc-artifacts = { version = "1.0.0-beta.6", git = "https://github.com/noir-lang/noir/", tag = "v1.0.0-beta.6", package = "noirc_artifacts" }
rand = "0.8.5"
rand_chacha = "0.3"
rustls = "0.23.15"
serde = { version = "1.0.193", features = ["derive", "rc"] }
tokio = { version = "1" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[profile.profiling]
inherits = "bench"
debug = true
lto = "thin"
