[workspace]
members = ["private_deposit", "contract-rs"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
authors = ["TACEO GmbH <hello@taceo.io>"]
homepage = "https://www.taceo.io"
repository = "https:://github.com/TaceoLabs/private_deposit"
license = "MIT OR Apache-2.0"
publish = false
readme = "./README.md"

[workspace.dependencies]
alloy = { version = "1", default-features = false }
ark-babyjubjub = { package = "taceo-ark-babyjubjub", version = "0.5" }
ark-bn254 = "^0.5.0"
ark-ec = "^0.5.0"
ark-ff = "^0.5.0"
ark-groth16 = "0.5.0"
ark-serialize = { version = "^0.5.0", features = ["derive", "std"] }
clap = { version = "4.4.8", features = ["derive"] }
circom-mpc-vm = { version = "0.9.0", git = "https://github.com/TaceoLabs/co-snarks", rev = "cd1fb5b260ba80b81eba2a37e036d180eedc090a" }
co-circom = { version = "0.10.0", git = "https://github.com/TaceoLabs/co-snarks", rev = "cd1fb5b260ba80b81eba2a37e036d180eedc090a" }
co-noir = { version = "0.7.0", git = "https://github.com/TaceoLabs/co-snarks", rev = "cd1fb5b260ba80b81eba2a37e036d180eedc090a" }
co-noir-common = { version = "0.2.0", git = "https://github.com/TaceoLabs/co-snarks", rev = "cd1fb5b260ba80b81eba2a37e036d180eedc090a" }
co-noir-to-r1cs = { version = "0.1.0", git = "https://github.com/TaceoLabs/CoNoir-to-R1CS", rev = "53bf34b9e730d9b2289d539524896224e96e3dfd" }
# co-noir-to-r1cs = { version = "0.1.0", git = "https://github.com/TaceoLabs/CoNoir-to-R1CS", branch = "deploy" }
eyre = "0.6.12"
figment = { version = "0.10.19", features = ["toml", "env"] }
itertools = "0.14.0"
mpc-core = { version = "0.10.0", git = "https://github.com/TaceoLabs/co-snarks", rev = "cd1fb5b260ba80b81eba2a37e036d180eedc090a" }
mpc-net = { version = "0.5.0", git = "https://github.com/TaceoLabs/co-snarks", rev = "cd1fb5b260ba80b81eba2a37e036d180eedc090a", features = [
    "local",
] }
noirc-artifacts = { version = "1.0.0-beta.15", git = "https://github.com/noir-lang/noir/", tag = "v1.0.0-beta.15", package = "noirc_artifacts" }
noir-types = { version = "0.1.0", git = "https://github.com/TaceoLabs/co-snarks", rev = "cd1fb5b260ba80b81eba2a37e036d180eedc090a" }
rand = "0.8.5"
rand_chacha = "0.3"
rustls = "0.23.15"
serde = { version = "1.0.193", features = ["derive", "rc"] }
tokio = { version = "1" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[profile.profiling]
inherits = "bench"
debug = true
lto = "thin"
