[package]
name = "rust-contract"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
alloy = { workspace = true, features = [
    "full",
    "rpc",
    "rpc-client-ws",
    "node-bindings",
] }
ark-babyjubjub.workspace = true
ark-bn254.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-groth16.workspace = true
eyre.workspace = true
mpc-core.workspace = true
rand.workspace = true
tokio = { workspace = true, features = [
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
    "tokio-macros",
] }
tracing.workspace = true
serde.workspace = true
