[package]
name = "private_deposit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
ark-bn254.workspace = true
ark-ff.workspace = true
ark-serialize.workspace = true
co-noir.workspace = true
co-ultrahonk.workspace = true
eyre.workspace = true
mpc-core.workspace = true
mpc-net.workspace = true
noirc-artifacts.workspace = true
oblivious_map_proof.workspace = true
