[package]
name = "private_deposit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
ark-bn254.workspace = true
ark-ff.workspace = true
ark-groth16.workspace = true
ark-serialize.workspace = true
clap.workspace = true
co-circom.workspace = true
co-noir.workspace = true
co-noir-to-r1cs.workspace = true
co-ultrahonk.workspace = true
eyre.workspace = true
figment.workspace = true
itertools.workspace = true
mpc-core.workspace = true
mpc-net.workspace = true
noirc-artifacts.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rustls.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
